windowerhelper/include/windowerhelper_4_0.h

	typedef struct windower_instance_type* windower_instance;

	typedef struct windower_command_type* windower_command;

	typedef struct windower_text_type* windower_text;


	WINDOWER_HELPER_API unsigned int windower_create(windower_instance* result, unsigned int process);

	WINDOWER_HELPER_API unsigned int windower_create_remote(windower_instance* result, char const* domain, unsigned int process);

	WINDOWER_HELPER_API unsigned int windower_delete(windower_instance handle);


	WINDOWER_HELPER_API unsigned int windower_get_version(windower_instance handle, unsigned int* result);

	WINDOWER_HELPER_API unsigned int windower_send_string(windower_instance handle, char const* string);

	WINDOWER_HELPER_API unsigned int windower_set_key_state(windower_instance handle, unsigned int key, unsigned int state);

	WINDOWER_HELPER_API unsigned int windower_block(windower_instance handle, unsigned int input_kind);

	WINDOWER_HELPER_API unsigned int windower_unblock(windower_instance handle, unsigned int input_kind);


	WINDOWER_HELPER_API unsigned int windower_next_command(windower_instance handle, windower_command* result);

	WINDOWER_HELPER_API unsigned int windower_command_delete(windower_command handle);

	WINDOWER_HELPER_API unsigned int windower_command_length(windower_command handle, unsigned int* result);

	WINDOWER_HELPER_API unsigned int windower_command_string(windower_command handle, char const** result);


	WINDOWER_HELPER_API unsigned int windower_text_create(windower_instance handle, windower_text* result, char const* name);

	WINDOWER_HELPER_API unsigned int windower_text_delete(windower_text handle);

	WINDOWER_HELPER_API unsigned int windower_text_set_text(windower_text handle, char const* text);

	WINDOWER_HELPER_API unsigned int windower_text_show(windower_text handle);

	WINDOWER_HELPER_API unsigned int windower_text_hide(windower_text handle);

	WINDOWER_HELPER_API unsigned int windower_text_set_location(windower_text handle, int x, int y);

	WINDOWER_HELPER_API unsigned int windower_text_set_foreground(windower_text handle, unsigned char red, unsigned char green, unsigned char blue, unsigned char alpha);

	WINDOWER_HELPER_API unsigned int windower_text_set_background(windower_text handle, unsigned char red, unsigned char green, unsigned char blue, unsigned char alpha);

	WINDOWER_HELPER_API unsigned int windower_text_show_background(windower_text handle);

	WINDOWER_HELPER_API unsigned int windower_text_hide_background(windower_text handle);

	WINDOWER_HELPER_API unsigned int windower_text_set_font(windower_text handle, char const* typeface, float size);

	WINDOWER_HELPER_API unsigned int windower_text_set_weight(windower_text handle, unsigned int weight);

	WINDOWER_HELPER_API unsigned int windower_text_set_style(windower_text handle, unsigned int style);

	WINDOWER_HELPER_API unsigned int windower_text_set_alignment(windower_text handle, unsigned int alignment);

	WINDOWER_HELPER_API unsigned int windower_text_set_padding(windower_text handle, float pixels);

		enum type
		{
			none							= WINDOWER_ERROR_NONE,
			unknown							= WINDOWER_ERROR_UNKNOWN,
			out_of_memory					= WINDOWER_ERROR_OUT_OF_MEMORY,
			invalid_argument				= WINDOWER_ERROR_INVALID_ARGUMENT,
			out_of_range					= WINDOWER_ERROR_OUT_OF_RANGE,
			invalid_handle					= WINDOWER_ERROR_INVALID_HANDLE,
			connection_fault				= WINDOWER_ERROR_CONNECTION_FAULT,
			connection_closed				= WINDOWER_ERROR_CONNECTION_CLOSED,
			interrupt						= WINDOWER_ERROR_INTERRUPT,
			invalid_reply					= WINDOWER_ERROR_INVALID_REPLY,
			not_found						= WINDOWER_ERROR_NOT_FOUND,
			encoding						= WINDOWER_ERROR_ENCODING,
		};

		enum type
		{
			esc								= WINDOWER_KEY_ESCAPE,
			enter							= WINDOWER_KEY_ENTER,
			ins								= WINDOWER_KEY_INSERT,
			del								= WINDOWER_KEY_DELETE,
			home							= WINDOWER_KEY_HOME,
			end								= WINDOWER_KEY_END,
			page_up							= WINDOWER_KEY_PAGE_UP,
			page_down						= WINDOWER_KEY_PAGE_DOWN,
			left_ctrl						= WINDOWER_KEY_LEFT_CONTROL,
			left_alt						= WINDOWER_KEY_LEFT_ALT,
			left_shift						= WINDOWER_KEY_LEFT_SHIFT,
			right_ctrl						= WINDOWER_KEY_RIGHT_CONTROL,
			right_alt						= WINDOWER_KEY_RIGHT_ALT,
			right_shift						= WINDOWER_KEY_RIGHT_SHIFT,
			left_windows					= WINDOWER_KEY_LEFT_WINDOWS,
			right_windows					= WINDOWER_KEY_RIGHT_WINDOWS,
			app_menu						= WINDOWER_KEY_APP_MENU,
			f1								= WINDOWER_KEY_F1,
			f2								= WINDOWER_KEY_F2,
			f3								= WINDOWER_KEY_F3,
			f4								= WINDOWER_KEY_F4,
			f5								= WINDOWER_KEY_F5,
			f6								= WINDOWER_KEY_F6,
			f7								= WINDOWER_KEY_F7,
			f8								= WINDOWER_KEY_F8,
			f9								= WINDOWER_KEY_F9,
			f10								= WINDOWER_KEY_F10,
			f11								= WINDOWER_KEY_F11,
			f12								= WINDOWER_KEY_F12,
			f13								= WINDOWER_KEY_F13,
			f14								= WINDOWER_KEY_F14,
			f15								= WINDOWER_KEY_F15,
			print_screen					= WINDOWER_KEY_PRINT_SCREEN,
			scroll_lock						= WINDOWER_KEY_SCROLL_LOCK,
			pause_break						= WINDOWER_KEY_BREAK,
			up								= WINDOWER_KEY_UP,
			down							= WINDOWER_KEY_DOWN,
			left							= WINDOWER_KEY_LEFT,
			right							= WINDOWER_KEY_RIGHT,
			num_lock						= WINDOWER_KEY_NUM_LOCK,
			num_pad_0						= WINDOWER_KEY_NUM_PAD_0,
			num_pad_1						= WINDOWER_KEY_NUM_PAD_1,
			num_pad_2						= WINDOWER_KEY_NUM_PAD_2,
			num_pad_3						= WINDOWER_KEY_NUM_PAD_3,
			num_pad_4						= WINDOWER_KEY_NUM_PAD_4,
			num_pad_5						= WINDOWER_KEY_NUM_PAD_5,
			num_pad_6						= WINDOWER_KEY_NUM_PAD_6,
			num_pad_7						= WINDOWER_KEY_NUM_PAD_7,
			num_pad_8						= WINDOWER_KEY_NUM_PAD_8,
			num_pad_9						= WINDOWER_KEY_NUM_PAD_9,
			num_pad_enter					= WINDOWER_KEY_NUM_PAD_ENTER,
			num_pad_minus					= WINDOWER_KEY_NUM_PAD_MINUS,
			num_pad_plus					= WINDOWER_KEY_NUM_PAD_PLUS,
			num_pad_multiply				= WINDOWER_KEY_NUM_PAD_MULTIPLY,
			num_pad_divide					= WINDOWER_KEY_NUM_PAD_DIVIDE,
			num_pad_period					= WINDOWER_KEY_NUM_PAD_PPERIOD,
			tab								= WINDOWER_KEY_TAB,
			backspace						= WINDOWER_KEY_BACKSPACE,
			space							= WINDOWER_KEY_SPACE,
			a								= WINDOWER_KEY_A,
			b								= WINDOWER_KEY_B,
			c								= WINDOWER_KEY_C,
			d								= WINDOWER_KEY_D,
			e								= WINDOWER_KEY_E,
			f								= WINDOWER_KEY_F,
			g								= WINDOWER_KEY_G,
			h								= WINDOWER_KEY_H,
			i								= WINDOWER_KEY_I,
			j								= WINDOWER_KEY_J,
			k								= WINDOWER_KEY_K,
			l								= WINDOWER_KEY_L,
			m								= WINDOWER_KEY_M,
			n								= WINDOWER_KEY_N,
			o								= WINDOWER_KEY_O,
			p								= WINDOWER_KEY_P,
			q								= WINDOWER_KEY_Q,
			r								= WINDOWER_KEY_R,
			s								= WINDOWER_KEY_S,
			t								= WINDOWER_KEY_T,
			u								= WINDOWER_KEY_U,
			v								= WINDOWER_KEY_V,
			w								= WINDOWER_KEY_W,
			x								= WINDOWER_KEY_X,
			y								= WINDOWER_KEY_Y,
			z								= WINDOWER_KEY_Z,
			grave							= WINDOWER_KEY_GRAVE,
			number_1						= WINDOWER_KEY_1,
			number_2						= WINDOWER_KEY_2,
			number_3						= WINDOWER_KEY_3,
			number_4						= WINDOWER_KEY_4,
			number_5						= WINDOWER_KEY_5,
			number_6						= WINDOWER_KEY_6,
			number_7						= WINDOWER_KEY_7,
			number_8						= WINDOWER_KEY_8,
			number_9						= WINDOWER_KEY_9,
			number_0						= WINDOWER_KEY_0,
			minus							= WINDOWER_KEY_MINUS,
			equals							= WINDOWER_KEY_EQUALS,
			left_bracket					= WINDOWER_KEY_LEFT_BRACKET,
			right_bracket					= WINDOWER_KEY_RIGHT_BRACKET,
			backslash						= WINDOWER_KEY_BACKSLASH,
			semicolon						= WINDOWER_KEY_SEMICOLON,
			apostrophe						= WINDOWER_KEY_APOSTROPHE,
			comma							= WINDOWER_KEY_COMMA,
			period							= WINDOWER_KEY_PERIOD,
			slash							= WINDOWER_KEY_SLASH,
			caps_lock						= WINDOWER_KEY_CAPS_LOCK,
			play_pause						= WINDOWER_KEY_PLAY_PAUSE,
			stop							= WINDOWER_KEY_STOP,
			next_track						= WINDOWER_KEY_NEXT_TRACK,
			previous_track					= WINDOWER_KEY_PREVIOUS_TRACK,
			volume_up						= WINDOWER_KEY_VOLUME_UP,
			volume_down						= WINDOWER_KEY_VOLUME_DOWN,
			mute							= WINDOWER_KEY_MUTE,
			media_select					= WINDOWER_KEY_MEDIA_SELECT,
			power							= WINDOWER_KEY_POWER,
			sleep							= WINDOWER_KEY_SLEEP,
			wake							= WINDOWER_KEY_WAKE,
			web_back						= WINDOWER_KEY_WEB_BACK,
			web_forward						= WINDOWER_KEY_WEB_FORWARD,
			web_stop						= WINDOWER_KEY_WEB_STOP,
			web_refresh						= WINDOWER_KEY_WEB_REFRESH,
			web_home						= WINDOWER_KEY_WEB_HOME,
			web_search						= WINDOWER_KEY_WEB_SEARCH,
			web_bookmarks					= WINDOWER_KEY_WEB_BOOKMARKS,
			mail							= WINDOWER_KEY_MAIL,
			my_computer						= WINDOWER_KEY_MY_COMPUTER,
			calculator						= WINDOWER_KEY_CALCULATOR,
			yen								= WINDOWER_KEY_YEN,
			kana							= WINDOWER_KEY_KANA,
			kanji							= WINDOWER_KEY_KANJI,
			convert							= WINDOWER_KEY_CONVERT,
			no_convert						= WINDOWER_KEY_NO_CONVERT,
			circumflex						= WINDOWER_KEY_CIRCUMFLEX,
		};

		enum type
		{
			up								= WINDOWER_KEY_STATE_UP,
			down							= WINDOWER_KEY_STATE_DOWN,
		};

		enum type
		{
			none							= WINDOWER_INPUT_TYPE_NONE,
			keyboard						= WINDOWER_INPUT_TYPE_KEYBOARD,
			mouse							= WINDOWER_INPUT_TYPE_MOUSE,
			all								= WINDOWER_INPUT_TYPE_ALL,
		};

		enum type
		{
			default							= WINDOWER_TEXT_FONT_WEIGHT_DEFAULT,
			normal							= WINDOWER_TEXT_FONT_WEIGHT_NORMAL,
			bold							= WINDOWER_TEXT_FONT_WEIGHT_BOLD,
		};

		enum type
		{
			none							= WINDOWER_TEXT_FONT_STYLE_NONE,
			italic							= WINDOWER_TEXT_FONT_STYLE_ITALIC,
		};

		enum type
		{
			left							= WINDOWER_TEXT_ALIGN_LEFT,
			right							= WINDOWER_TEXT_ALIGN_RIGHT,
		};